<resources>
    <string name="app_name">Assignment 7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_expense">Current Expense</string>
    <string name="add">Add</string>
    <string name="add_expense">Add an Expense</string>
    <string name="name">Expense Name:</string>
    <string name="category">Category:</string>
    <string name="amount">Amount:</string>
    <string name="details">Expense Details</string>
    <string name="date">Date:</string>
    <string name="expense_add">Add Expense</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="save">SAVE</string>
    <string name="edit">Edit Expense</string>
    <string-array name="categoryArray">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
</resources>
