<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowExpense">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="76dp"
            android:layout_toEndOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="172dp"
            android:layout_marginTop="33dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="172dp"
            android:layout_marginTop="68dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="184dp"
            android:layout_marginTop="100dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="154dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="116dp"
            android:layout_marginTop="16dp"
            android:text="@string/details"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="76dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="33dp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="66dp"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="100dp"
            android:text="@string/date" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="246dp"
            android:layout_marginTop="328dp"
            android:layout_marginEnd="50dp"
            android:text="@string/close" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="69dp"
            android:layout_marginTop="328dp"
            android:layout_marginEnd="227dp"
            android:text="@string/edit" />
    </RelativeLayout>
</FrameLayout>