<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditExpense">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eetextView"
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="106dp"
            android:text="@string/add_expense"
            android:textAlignment="center"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/eetextView3"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="228dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/eetextView5"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="271dp"
            android:layout_marginEnd="226dp"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/eText1"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="117dp"
            android:layout_marginEnd="28dp" />

        <TextView
            android:id="@+id/eetextView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="234dp"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/eespinner"
            android:layout_width="305dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="28dp"/>

        <EditText
            android:id="@+id/eText2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="305dp"
            android:layout_marginEnd="26dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/eebutton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="62dp"
            android:layout_marginTop="402dp"
            android:layout_marginEnd="234dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/eebutton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="402dp"
            android:layout_marginEnd="76dp"
            android:text="@string/cancel" />

    </RelativeLayout>

</FrameLayout>